--- a/springboot-archetype/pom.xml
+++ b/springboot-archetype/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.nextguru</groupId>
   <artifactId>springboot-archetype</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   
   <parent>
   	<groupId>org.springframework.boot</groupId>
